syntax = "proto3";
package buildservice;

message File {
  string hash = 1;
  string path = 2;
  bool broken = 3;
}

message BuildMessage {
  message Compile {
    File source = 1;
    File target = 2;
  }
  message Link {
    File target = 1;
    repeated File input = 2;
    repeated string linkLibs = 3;
    repeated string libDirs = 4;
  }
  repeated Compile compilations = 1;
  // can be zero
  repeated Link binary = 2;
}

message BuildResponse {
  bool success = 1;
}

message LogMessage {
  bytes msg = 1;
}

message LogResponse {
  bool success = 1;
}

message QuitMessage {
  bool kill = 1;
}

message QuitResponse {
  bool success = 1;
}

message PathSubstitutionMessage {
  string old = 1;
  string new = 2;  
}

message AnalysisMessage {
  string selector = 1;
  string analyzer = 2;
  repeated PathSubstitutionMessage pathSub = 4; 
  map <string, string> config = 3;
}

message AnalysisResponse {
  bool success = 1;
}

message ReportMessage {
  string selector = 1;
  string name = 2;
  string reportType = 3;
}

message ReportResponse {
  bool success = 1;
  string responseMessage = 2;
}

service BuildService {
  rpc Build(BuildMessage) returns (BuildResponse) {}
  rpc Log(LogMessage) returns (LogResponse) {}
  rpc Quit(QuitMessage) returns (QuitResponse) {}
  rpc Analyze(AnalysisMessage) returns (AnalysisResponse) {}
  rpc Report(ReportMessage) returns (ReportResponse) {}
}
